--- a/etl/notebooks/etl(trend_bridge).ipynb
+++ b/etl/notebooks/etl(trend_bridge).ipynb
@@ -1960,7 +1960,7 @@
        "      <th>concept</th>\n",
        "      <th>name</th>\n",
        "      <th>concept_type</th>\n",
-       "      <th>indicator_url</th>\n",
+       "      <th>source_url</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1994,8 +1994,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>indicator_url</td>\n",
-       "      <td>Indicator URL</td>\n",
+       "      <td>source_url</td>\n",
+       "      <td>Source URL</td>\n",
        "      <td>string</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -2009,9 +2009,9 @@
        "1                            time                              Time   \n",
        "2  life_expectancy_at_birth_years  Life expectancy at birth (years)   \n",
        "3                             geo                           Country   \n",
-       "4                   indicator_url                     Indicator URL   \n",
+       "4                      source_url                        Source URL   \n",
        "\n",
-       "    concept_type                                      indicator_url  \n",
+       "    concept_type                                         source_url  \n",
        "0         string                                                NaN  \n",
        "1           time                                                NaN  \n",
        "2        measure  https://github.com/open-numbers/ddf--gapminder...  \n",
@@ -2127,7 +2127,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>concept</td>\n",
-       "      <td>indicator_url</td>\n",
+       "      <td>source_url</td>\n",
        "      <td>ddf--concepts.csv</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2150,7 +2150,7 @@
        "            key          value  \\\n",
        "0       concept           name   \n",
        "1       concept   concept_type   \n",
-       "2       concept  indicator_url   \n",
+       "2       concept     source_url   \n",
        "3  country,year     population   \n",
        "4       country           name   \n",
        "\n",
